ultimo detalhe: removendo um local de atividade
